fixed css overflow for html, root, & body

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 body, #root, html {
   width: 100%;
-  height: 100vh;
-  overflow: hidden;
+  height: 100%;
+
 }
 
 body, root, html, ul {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: white;
+  background-color: black;
 }
 
 h1 {
